--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <base href="/">
+	<base href="/">
 
-    <title>Activate Good</title>
+	<title>Activate Good</title>
 
-    <!-- build:css -->
-    <link rel="stylesheet" href="vendor/angular-toastr/dist/angular-toastr.css"></script>
-    <link rel="stylesheet" href="styles/styles.css"/>
-    <!-- endbuild -->
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
-    <!-- build:scripts -->
-    <script src="vendor/angular/angular.js"></script>
-    <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="vendor/angular-jwt/dist/angular-jwt.js"></script>  
-    <script src="vendor/angular-toastr/dist/angular-toastr.js"></script>
-    <script src="app/templates.js"></script>
-    <script src="app/app.js"></script>
+	<!-- build:css -->
+	<link rel="stylesheet" href="vendor/angular-toastr/dist/angular-toastr.css"></script>
+	<link rel="stylesheet" href="styles/styles.css"/>
+	<!-- endbuild -->
 
-    <script src="app/navBar/navBarDtv.js"></script>
-    <script src="app/opportunities/oppCardDtv.js"></script>
-    <script src="app/opportunities/oppListDtv.js"></script>
-    <script src="app/opportunities/oppListPageCtrl.js"></script>
+	<!-- build:scripts -->
+	<script src="vendor/angular/angular.js"></script>
+	<script src="vendor/angular-animate/angular-animate.js"></script>
+	<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+	<script src="vendor/angular-jwt/dist/angular-jwt.js"></script>  
+	<script src="vendor/angular-toastr/dist/angular-toastr.js"></script>
+	<script src="app/templates.js"></script>
+	<script src="app/app.js"></script>
 
-    <!-- endbuild -->
-    
+	<script src="app/navBar/navBarDtv.js"></script>
+	<script src="app/opportunities/oppCardDtv.js"></script>
+	<script src="app/opportunities/oppListDtv.js"></script>
+	<script src="app/opportunities/oppListPageCtrl.js"></script>
+
+	<!-- endbuild -->
+	
 </head>
 <body>
 
-    <ag-nav-bar></ag-nav-bar>
+	<div class="jumbotron jumbotron-fluid ag-jumbotron m-b-0">
+		<div class="container p-l-0 p-r-0">
+			<h1 class="display-4 text-xs-center">Volunteer in the Triangle</h1>
+		</div>
+	</div>
 
-    <div class="container-fluid">
+	<div class="container-fluid p-l-0 p-r-0">
+		<div class="row m-r-0">
+			<div class="col-xs-12 p-r-0">
+				<ag-nav-bar></ag-nav-bar>
+			</div>
+		</div>		
+	</div>
 
-        <div class="row">
-            <div class="col-xs-12" ui-view>
-                
-            </div>
-        </div>
-    </div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12" ui-view></div>
+		</div>
+	</div>
 
-    <!-- build:postscripts -->
-    <script src="vendor/jquery/dist/jquery.min.js"></script>
-    <script src="vendor/tether/dist/js/tether.js"></script>
-    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
-    <!-- endbuild -->
+	<!-- build:postscripts -->
+	<script src="vendor/jquery/dist/jquery.min.js"></script>
+	<script src="vendor/tether/dist/js/tether.js"></script>
+	<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+	<!-- endbuild -->
 </body>
 </html>
