--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
 	<!-- build:css -->
-	<link rel="stylesheet" href="vendor/angular-toastr/dist/angular-toastr.css"></script>
+	<link rel="stylesheet" href="vendor/angular-toastr/dist/angular-toastr.css"/>
 	<link rel="stylesheet" href="styles/styles.css"/>
 	<!-- endbuild -->
 
@@ -30,6 +30,9 @@
 	<script src="app/templates.js"></script>
 	<script src="app/app.js"></script>
 
+	<script src="app/login/loginButtonsDirective.js"></script>
+	<script src="app/login/sessionService.js"></script>
+
 	<script src="app/apiServices/mockData.js"></script>
 	<script src="app/apiServices/oppService.js"></script>
 
@@ -37,15 +40,18 @@
 	<script src="app/opportunities/oppCardDirective.js"></script>
 	<script src="app/opportunities/oppListDirective.js"></script>
 	<script src="app/opportunities/oppListPageController.js"></script>
+	<script src="app/opportunities/signupPageController.js"></script>
 
 	<!-- endbuild -->
 	
 </head>
 <body>
 
-	<div class="jumbotron jumbotron-fluid ag-jumbotron m-b-0">
-		<div class="container p-l-0 p-r-0">
-			<img src="images/ag-simple.png" />
+	<ag-login-buttons></ag-login-buttons>
+
+	<div class="jumbotron jumbotron-fluid ag-jumbotron m-b-0 p-t-1 p-b-1">		
+		<div class="container-fluid">
+			<img src="images/ag-simple.png" height="100" />
 		</div>
 	</div>
 
@@ -57,7 +63,7 @@
 		</div>		
 	</div>
 
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12" ui-view></div>
 		</div>
