Added infinite scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -29,19 +29,18 @@
 
 	<script src="app/templates.js"></script>
 	<script src="app/app.js"></script>
+	
+	<script src="app/services/sessionService.js"></script>
+	<script src="app/services/mockData.js"></script>
+	<script src="app/services/oppService.js"></script>
 
-	<script src="app/login/loginButtonsDirective.js"></script>
-	<script src="app/login/sessionService.js"></script>
+	<script src="app/directives/common/login/loginButtonsDirective.js"></script>
+	<script src="app/directives/common/navBar/navBarDirective.js"></script>
+	<script src="app/directives/opportunities/oppCard/oppCardDirective.js"></script>
+	<script src="app/directives/opportunities/shiftCard/shiftCardDirective.js"></script>
 
-	<script src="app/apiServices/mockData.js"></script>
-	<script src="app/apiServices/oppService.js"></script>
-
-	<script src="app/navBar/navBarDirective.js"></script>
-	<script src="app/opportunities/oppCardDirective.js"></script>
-	<script src="app/opportunities/oppListDirective.js"></script>
-	<script src="app/opportunities/oppListPageController.js"></script>
-	<script src="app/opportunities/signupPageController.js"></script>
-
+	<script src="app/pages/oppList/oppListPageController.js"></script>
+	<script src="app/pages/signup/signupPageController.js"></script>
 	<!-- endbuild -->
 	
 </head>
