--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
 	<div class="jumbotron jumbotron-fluid ag-jumbotron m-b-0 p-t-1 p-b-1">		
 		<div class="container-fluid">
-			<img src="images/ag-simple.png" height="100" />
+			<a ui-sref="home"><img src="images/ag-simple.png" height="100" /></a>
 		</div>
 	</div>
 
