--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 	<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 	<script src="vendor/angular-jwt/dist/angular-jwt.js"></script>  
 	<script src="vendor/angular-toastr/dist/angular-toastr.js"></script>
-
-	<script src='vendor/ngInfiniteScroll/build/ng-infinite-scroll.js'></script>
+	<script src="vendor/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+	<script src="vendor/underscore/underscore.js"></script>
 
 	<script src="app/templates.js"></script>
 	<script src="app/app.js"></script>
